# python-project-52

./: .env-example  .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: PythonCI.yml  lint_check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixin.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_created_at.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_executor.py  0002_initial.py
task_manager/templates/: 404.html  500.html  base.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_user_created_at.py
